<resources>
    <string name="app_name">PatternBox</string>
    <string name="app_title">PATTERN BOX</string>
    <string name="hint_email">USER EMAIL</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_reset">SEND</string>
    <string name="btn_link_to_register">Sign up For Pattern Box</string>
    <string name="btn_link_to_reset">Forgot your password?</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="btn_link_to_main">Back</string>
    <string name="btn_scan_pattern"> SCAN PATTERN</string>
    <string name="btn_my_patterns">MY PATTERNS</string>
    <string name="btn_book_marks">BOOKMARKS</string>
    <string name="btn_buy_patterns">BUY_PATTERNS</string>
    <string name="btn_skip_tutorial">Skip tutorial</string>
    <string name="btn_front">FRONT</string>
    <string name="btn_back">BACK</string>
    <string name="lbl_notes">NOTES:</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="reset_enter_email">ENTER EMAIL ADDRESS</string>
    <string name="reset_description">Pattern Box will send password \n reset instructions to the email address \n associated with your account</string>
    <string name="hint_signup_email">Enter Email Address</string>
    <string name="hint_signup_password">Enter Password</string>
    <string name="hint_signup_confirm">Re -enter Password</string>
    <string name="hint_search">Enter Pattern Name</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_main">MAIN</string>
    <string name="nav_help">HOW TO USE</string>
    <string name="nav_policy">PRIVACY POLICY</string>
    <string name="nav_terms">TERMS OF USE</string>
    <string name="nav_contact">CONTACT US</string>
    <string name="nav_logout">LOGOUT</string>
    <string-array name="nav_item_activity_titles">
        <item>PATTERN BOX</item>
        <item>HOW TO USE</item>
        <item>Privacy Policy</item>
        <item>Terms Of Use</item>
        <item>Contact Us</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="action_search">Search</string>
    <string name="tutorial_title_scan_patterns">SCAN PATTERNS</string>
    <string name="tutorial_content_scan">Add items by simply taking a photo, \n front and back for patterns, adding item to \n a category, then fill in information \n and select save.</string>
    <string name="tutorial_title_capture">CAPTURED PATTERNS</string>
    <string name="tutorial_content_capture">Tap captured pattern image to toggle \n viewing of front and back and zoom in \n and out by pinching. \n   </string>
    <string name="tutorial_content_capture1">Have control over all saved patterns \n with the Edit, Bookmark, Highlight \n and Delete feature. \n  </string>
    <string name="tutorial_title_buy">BUY PATTERNS</string>
    <string name="tutorial_title_import">IMPORT PDF PATTERNS</string>
    <string name="tutorial_content_import">When downloading PDF patterns,\n select OPEN WITH or More option \n to import patterns directly into PATTERNBOX</string>
    <string name="tutorial_title_bookmark">BOOKMARKS</string>
    <string name="tutorial_content_bookmark">Have ongoing projects? Pattern projects \n that are bookmarked will be viewed \n easily on the app\'s bookmarks page. \n </string>
    <string name="tutorial_title_category">CUSTOMIZE CATEGORY</string>
    <string name="tutorial_content_category">My Patterns, select PDF or CAPTURED, \n select EDIT, ADD to create \n more  Categories \n</string>
    <string name="tutorial_title_project">PROJECT</string>
    <string name="tutorial_content_project">Keep track of projects by selecting PROJECTS, \n select the + icon, then add information \n needed for the project, also select a \n pattern, fabric and notions.</string>
    <string name="tutorial_title_search">SEARCH</string>
    <string name="tutorial_content_search">When uploading Patterns, Fabrics, Notions or Projects, what you fill into NAME will be what you will enter to SEARCH, this will give you options on how you want to search for items in your PATTERNBOX</string>
</resources>