<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/nav_help" />

        <item
            android:id="@+id/nav_policy"
            android:title="@string/nav_policy" />


        <item
            android:id="@+id/nav_term"
            android:title="@string/nav_terms" />

        <item
            android:id="@+id/nav_contact"
            android:title="@string/nav_contact" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
