<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/launchicon" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGray"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_split"
            android:orientation="vertical"></LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorLightGray"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="@color/colorHint"
            android:textSize="14sp" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorDefault"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/btnLinkToResetScreen"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_reset"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>